fixed hamburger elements z-index

--- a/src/MagicCard.css
+++ b/src/MagicCard.css
@@ -49,6 +49,7 @@
   margin: auto;
   left: 0;
   right: 0;
+  z-index: -1;
 }
 
 .card:hover {
